tests/spec/parse/snapshots/array_new_turbofish_args.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let _xs = Array.new<int, 3>(); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "_xs",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: DotAccess {
                                expression: Identifier {
                                    value: "Array",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 23,
                                        byte_length: 5,
                                    },
                                    resolution: Unresolved,
                                },
                                member: "new",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 9,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: Unresolved(
                                [
                                    Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 33,
                                            byte_length: 3,
                                        },
                                    },
                                    Constant {
                                        value: 3,
                                        text: None,
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 38,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 23,
                                byte_length: 19,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 29,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 34,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 44,
        },
    },
]
