tests/spec/parse/snapshots/array_type_annotation.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(xs: Array<int, 3>) -> int { xs[0] }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "xs",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 2,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Array",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            },
                            Constant {
                                value: 3,
                                text: None,
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 1,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 13,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 31,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    IndexedAccess {
                        expression: Identifier {
                            value: "xs",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 2,
                            },
                            resolution: Unresolved,
                        },
                        index: Literal {
                            literal: Integer {
                                value: 0,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 40,
                                byte_length: 1,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 39,
                            byte_length: 3,
                        },
                        from_colon_syntax: false,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 35,
                    byte_length: 9,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 43,
        },
    },
]
