tests/spec/parse/snapshots/assign_index.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let mut arr = [1, 2, 3];
    arr[0] = 100;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "arr",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Slice(
                                [
                                    Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 1,
                                        },
                                    },
                                    Literal {
                                        literal: Integer {
                                            value: 2,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 33,
                                            byte_length: 1,
                                        },
                                    },
                                    Literal {
                                        literal: Integer {
                                            value: 3,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 36,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 29,
                                byte_length: 9,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 23,
                        },
                    },
                    Assignment {
                        target: IndexedAccess {
                            expression: Identifier {
                                value: "arr",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            index: Literal {
                                literal: Integer {
                                    value: 0,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 46,
                                    byte_length: 1,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 45,
                                byte_length: 3,
                            },
                            from_colon_syntax: false,
                        },
                        value: Literal {
                            literal: Integer {
                                value: 100,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 51,
                                byte_length: 3,
                            },
                        },
                        compound_operator: None,
                        span: Span {
                            file_id: 0,
                            byte_offset: 42,
                            byte_length: 12,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 46,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 56,
        },
    },
]
